--- a/app/templates/inprogress.html
+++ b/app/templates/inprogress.html
@@ -43,8 +43,8 @@
 	</style>
 	<body>
 		<div style = "position:absolute;" class = "info">
-			<img height = "100px" class = "center" src = 'tick.svg'>
-			<h2>Authentication successful, you may exit the page now</h2>
+			<img height = "100px" class = "center" src = 'in-progress.svg'>
+			<h2>Authentication in-progress, please wait...</h2>
     	</div>
 	</body>
 </html>
