redirect page working fine

--- a/app/templates/inprogress.html
+++ b/app/templates/inprogress.html
@@ -1,6 +1,6 @@
 <html>
 	<style>
-				*
+		*
 		{
 			margin: 0;
 			padding: 0;
@@ -45,6 +45,13 @@
 		<div style = "position:absolute;" class = "info">
 			<img height = "100px" class = "center" src = 'in-progress.svg'>
 			<h2>Authentication in-progress, please wait...</h2>
+			<script>
+				const queryString = window.location.search;
+				const urlParams = new URLSearchParams(queryString);
+				var code = urlParams.get('code');
+				window.open("http://127.0.0.1:5000/auth/redirect"+"?code="+code,"_self");
+				setTimeout("window.close()",3000); 
+			</script>
     	</div>
 	</body>
 </html>
